--- a/frontend/src/app/auth/register/register.html
+++ b/frontend/src/app/auth/register/register.html
@@ -1,1 +1,17 @@
-<div class="register-background h-screen w-full"></div>
+<div class="bg-[url('/assets/bgRegistreHortLink.png')] bg-no-repeat bg-cover bg-center h-screen w-full flex items-center justify-center z-0">
+    <div class="bg-blue-400 p-8 rounded-lg shadow-lg">
+        <h2 class="text-2xl font-bold mb-4">Registre-se</h2>
+        <form (ngSubmit)="onSubmit()">
+            <mat-form-field class="example-full-width">
+                <mat-label>Email</mat-label>
+                <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
+                @if (emailFormControl.hasError('email') && !emailFormControl.hasError('required')) {
+                <mat-error>Please enter a valid email address</mat-error>
+                }
+                @if (emailFormControl.hasError('required')) {
+                <mat-error>Email is <strong>required</strong></mat-error>
+                }
+            </mat-form-field>
+        </form>
+    </div>
+</div>
