--- a/frontend/src/app/components/navbar/navbar.html
+++ b/frontend/src/app/components/navbar/navbar.html
@@ -1,19 +1,24 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class=" border-gray-200 bg-emerald-700">
   <div class="max-w-7l flex flex-wrap items-center justify-between mx-auto p-4">
-  <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+  <a class="flex items-center space-x-3 rtl:space-x-reverse">
+      <img src="/assets/logo_hortlink.png" class="h-8" alt="HortiLink logo" />
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">HortiLink</span>
   </a>
   <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
       <button type="button" class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
         <span class="sr-only">Open user menu</span>
-        <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg" alt="user photo">
+        <img class="w-8 h-8 rounded-full" src="/assets/perfil_not_found.png" alt="user photo">
       </button>
       <!-- Dropdown menu -->
       <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow-sm dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
         <div class="px-4 py-3">
-          <span class="block text-sm text-gray-900 dark:text-white"> {{ nomeDoUsuario }}</span>
-          <span class="block text-sm  text-gray-500 truncate dark:text-gray-400">name@flowbite.com</span>
+          @if (usuarioLogado) {
+            <span class="block text-sm text-gray-900 dark:text-white"> {{ usuarioLogado.nome }}</span>
+            <span class="block text-sm  text-gray-500 truncate dark:text-gray-400">{{ usuarioLogado.email }}</span>
+          } @else {
+            <span class="block text-sm text-gray-900 dark:text-white">Usuário não logado</span>
+          }
+          
         </div>
         <ul class="py-2" aria-labelledby="user-menu-button">
           <li>
