--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,4 +1,4 @@
-<app-navbar [nomeDoUsuario]="nomeDoUsuario"></app-navbar>
+<app-navbar></app-navbar>
 
 <h1 class="text-3xl font-bold underline">
   Hello world!
