--- a/frontend/src/app/components/navbar/navbar.html
+++ b/frontend/src/app/components/navbar/navbar.html
@@ -1,56 +1,57 @@
-<nav class=" border-gray-200 bg-emerald-700">
-  <div class="max-w-7l flex flex-wrap items-center justify-between mx-auto p-4">
-  <a class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="/assets/logo_hortlink.png" class="h-8" alt="HortiLink logo" />
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">HortiLink</span>
-  </a>
-  <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-      <button type="button" class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
-        <span class="sr-only">Open user menu</span>
-        <img class="w-8 h-8 rounded-full" src="/assets/perfil_not_found.png" alt="user photo">
+<nav class=" border-gray-200 bg-[#2E7D32]">
+  <div class="max-w-7xl p-4 mx-auto flex items-center justify-between gap-6">
+    <div class="flex gap-3 items-center space-x-3">
+      <img src="/assets/logo.png" alt="Hortlink Logo" class="h-8">
+      <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">HortLink</span>
+    </div>
+
+    <!-- <button
+        class="text-[#2E7D32] border-2 border-[#2E7D32] bg-[#e8f5e8] hover:bg-[#2E7D32] hover:text-white font-medium rounded-full text-sm px-4 py-1 transition-colors duration-200">
+        <i class="fas fa-filter"></i>
+        Filtros
+      </button> -->
+    <form class="relative flex items-center w-full max-w-lg mx-auto">
+      <!-- ÍCONE -->
+      <div class="absolute inset-y-0 left-3 flex items-center pointer-events-none">
+        <svg class="w-5 h-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+        </svg>
+      </div>
+
+      <!-- INPUT -->
+      <input type="search" id="default-search"
+        class="block w-full pl-10 pr-24 py-2 text-sm text-gray-900 border border-gray-300 rounded-full bg-green-50 focus:ring-[#2E7D32] focus:border-[#2E7D32] placeholder-gray-500"
+        placeholder="Buscar produtos, produtores..." required />
+
+      <!-- BOTÃO -->
+      <button type="submit"
+        class="absolute right-2 top-1/2 -translate-y-1/2 text-[#2E7D32] border-2 border-[#2E7D32] bg-[#e8f5e8] hover:bg-[#2E7D32] hover:text-white font-medium rounded-full text-sm px-4 py-1 transition-colors duration-200">
+        Buscar
       </button>
-      <!-- Dropdown menu -->
-      <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow-sm dark:bg-gray-700 dark:divide-gray-600" id="user-dropdown">
+
+    </form>
+
+    <div class="flex items-center space-x-3">
+      <button class="max-w-10 max-h-10">
+        <i class="fas fa-cart-shopping text-white text-xl"></i>
+      </button>
+    <button class="flex text-sm rounded-full focus:ring-4 md:me-0" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
+        <img class="w-10 h-10 rounded-full" src="/assets/perfil_not_found.png" alt="user photo">
+      </button>
+      <div id="user-dropdown" class="z-50 hidden my-4 text-base list-none bg-gray-600 rounded-lg shadow-sm">
         <div class="px-4 py-3">
-          @if (usuarioLogado) {
-            <span class="block text-sm text-gray-900 dark:text-white"> {{ usuarioLogado.nome }}</span>
-            <span class="block text-sm  text-gray-500 truncate dark:text-gray-400">{{ usuarioLogado.email }}</span>
-          } @else {
-            <span class="block text-sm text-gray-900 dark:text-white">Usuário não logado</span>
-          }
-          
+          <span class="block text-sm text-gray-200">Edson</span>
+          <span class="block text-sm truncate text-gray-400">edsonveiga@gmail.com</span>  
         </div>
         <ul class="py-2" aria-labelledby="user-menu-button">
           <li>
-            <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
+            <a href="#" class="block px-4 py-2 text-sm text-gray-200 hover:bg-gray-400 ">Sign out</a>
           </li>
         </ul>
       </div>
-      <button data-collapse-toggle="navbar-user" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-user" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-    </button>
-  </div>
-  <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-user">
-    <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-      <li>
-        <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Pricing</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
-      </li>
-    </ul>
-  </div>
+    </div>
+
+
   </div>
 </nav>
