--- a/frontend/src/app/components/footer/footer.html
+++ b/frontend/src/app/components/footer/footer.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="max-w-7xl rounded-lg shadow-sm m-4 bg-gray-900">
+    <div class="w-full max-w-7xl mx-auto p-4 md:py-8">
+        <img src="assets/logo_hortlink.png" class="h-50 gap-4" alt="Logo Hortlink">
+    </div>
+</footer>
