--- a/frontend/src/app/components/navbar/navbar.html
+++ b/frontend/src/app/components/navbar/navbar.html
@@ -36,7 +36,7 @@
       <button class="max-w-10 max-h-10">
         <i class="fas fa-cart-shopping text-white text-xl"></i>
       </button>
-    <button class="flex text-sm rounded-full focus:ring-4 md:me-0" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
+    <button class="flex text-sm rounded-full focus:ring-4 focus:ring-green-light md:me-0" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom">
         <img class="w-10 h-10 rounded-full" src="/assets/perfil_not_found.png" alt="user photo">
       </button>
       <div id="user-dropdown" class="z-50 hidden my-4 text-base list-none bg-gray-600 rounded-lg shadow-sm">
