--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -3,8 +3,13 @@
 } @else {
   <app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'"></app-navbar>
 }
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<main class="bg-green-secundary flex justify-center">
+  <div class="grow-3 size-14"></div>
+  <div class="grow-7">
+    <h2 class="text-4xl text-green-light font-medium my-10">Produtos em destaque</h2>
+  </div>
+  <div class="grow-3 size-14"></div>
+</main>
+
 
 <app-footer></app-footer>
