--- a/frontend/src/app/components/footer/footer.html
+++ b/frontend/src/app/components/footer/footer.html
@@ -1,5 +1,27 @@
-<footer class="max-w-7xl rounded-lg shadow-sm m-4 bg-gray-900">
-    <div class="w-full max-w-7xl mx-auto p-4 md:py-8">
-        <img src="assets/logo_hortlink.png" class="h-50 gap-4" alt="Logo Hortlink">
+
+
+
+
+<footer class="bg-white shadow-sm dark:bg-gray-800">
+    <div class="w-full mx-auto max-w-7xl p-4 md:flex md:items-center md:justify-between">
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://flowbite.com/" class="hover:underline text-green-primary">HortLink</a>. Todos os direitos reservados.
+    </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">About</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+        </li>
+        <li>    
+            <a href="#" class="hover:underline">Contact</a>
+        </li>
+    </ul>
     </div>
 </footer>
+
+
+    
