--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,14 +1,48 @@
 @if(usuarioLogado != null) {
-  <app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email"></app-navbar>
+<app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email"></app-navbar>
 } @else {
-  <app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'"></app-navbar>
+<app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'"></app-navbar>
 }
-<main class="bg-green-secundary flex justify-center">
-  <div class="grow-3 size-14"></div>
-  <div class="grow-7">
+<main class="bg-green-secundary">
+
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+
     <h2 class="text-4xl text-green-light font-medium my-10">Produtos em destaque</h2>
+
+    <div class="grid grid-cols-4 gap-8">
+      @for (produto of produtos; track $index) {
+      <div class="bg-white shadow-lg overflow-hidden rounded-3xl">
+        <div class="h-48">
+          <img src="/assets/bgHortlink.png" class="w-full h-full object-cover" alt="Produto">
+        </div>
+        <div class="p-4">
+          <h3 class="font-medium text-lg">{{produto.nome}}</h3>
+          <p class="text-md py-2 font-medium">
+            {{produto.nomeComercio}}
+
+            @if (produto.tipoVendedor === 'Comercio') {
+            <i class="text-xl pl-4 text-green-primary fas fa-store"></i>
+            } @else if (produto.tipoVendedor === 'Produtor') {
+              <svg-farmer class="pl-4"></svg-farmer>
+            }
+          </p>
+          <p class="font-medium text-lg text-green-primary">R${{produto.valor}} /{{produto.unidadeMedida}}</p>
+
+          @if (produto.promocao != "") {
+          <p class="font-medium text-sm text-amber-400">R${{produto.promocao}} /{{produto.unidadeMedida}}</p>
+          } @else {
+          <p></p>
+          }
+
+        </div>
+      </div>
+      }
+
+    </div>
+
+    <div class="pb-10"></div>
+
   </div>
-  <div class="grow-3 size-14"></div>
 </main>
 
 
