--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -7,7 +7,7 @@
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
-    <h2 class="text-4xl text-green-light font-medium my-10">Produtos em destaque</h2>
+    <h2 class="text-4xl text-green-light font-semibold my-10">Produtos em destaque</h2>
 
     <div class="grid grid-cols-4 gap-8">
       @for (produto of produtos; track $index) {
@@ -23,7 +23,7 @@
             @if (produto.tipoVendedor === 'Comercio') {
             <i class="text-xl pl-4 text-green-primary fas fa-store"></i>
             } @else if (produto.tipoVendedor === 'Produtor') {
-              <svg-farmer class="pl-4"></svg-farmer>
+            <svg-farmer class="pl-4"></svg-farmer>
             }
           </p>
           <p class="font-medium text-lg text-green-primary">R${{produto.valor}} /{{produto.unidadeMedida}}</p>
@@ -31,9 +31,14 @@
           @if (produto.promocao != "") {
           <p class="font-medium text-sm text-amber-400">R${{produto.promocao}} /{{produto.unidadeMedida}}</p>
           } @else {
-          <p></p>
+            &nbsp;
           }
 
+          <button type=""
+            class="mt-4 w-full text-white bg-blue-500 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Adicionar ao carrinho
+            <i class="fas fa-cart-shopping text-white"></i>
+          </button>
         </div>
       </div>
       }
