Adiciona service de produtos

--- a/frontend/src/app/components/navbar/navbar.html
+++ b/frontend/src/app/components/navbar/navbar.html
@@ -26,7 +26,7 @@
 
       <!-- BOTÃO -->
       <button type="submit"
-        class="absolute right-2 top-1/2 -translate-y-1/2 text-[#2E7D32] border-2 border-[#2E7D32] bg-green-secundary hover:bg-[#2E7D32] hover:text-white font-medium rounded-full text-sm px-4 py-1 transition-colors duration-200">
+        class="absolute right-2 top-1/2 -translate-y-1/2 text-white border-2 border-blue-secundary bg-blue-primary hover:bg-blue-hover font-medium rounded-full text-sm px-4 py-1 transition-colors duration-200">
         Buscar
       </button>
 
