--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,7 +1,7 @@
 @if(usuarioLogado != null) {
-<app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email"></app-navbar>
+<app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email" [carrinhoCount]="carrinhoCount"></app-navbar>
 } @else {
-<app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'"></app-navbar>
+<app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'" [carrinhoCount]="carrinhoCount"></app-navbar>
 }
 <main class="bg-green-secundary">
 
@@ -34,8 +34,8 @@
             &nbsp;
           }
 
-          <button type=""
-            class="mt-4 w-full text-white bg-blue-500 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+          <button (click)="adicionarAoCarrinho(produto.id!)"
+            class="mt-4 w-full text-white bg-blue-primary hover:bg-blue-hover focus:ring-4 focus:outline-nones font-medium rounded-lg text-sm px-5 py-2.5 text-center">
             Adicionar ao carrinho
             <i class="fas fa-cart-shopping text-white"></i>
           </button>
