--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,7 +1,7 @@
 @if(usuarioLogado != null) {
-<app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email" [carrinhoCount]="carrinhoCount"></app-navbar>
+  <app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email" [carrinho]="carrinho"></app-navbar>
 } @else {
-<app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'" [carrinhoCount]="carrinhoCount"></app-navbar>
+  <app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'" [carrinho]="carrinho"></app-navbar>
 }
 <main class="bg-green-secundary">
 
