--- a/frontend/src/app/pages/carrinho/carrinho.html
+++ b/frontend/src/app/pages/carrinho/carrinho.html
@@ -1,11 +1,39 @@
 @if(usuarioLogado != null) {
-  <app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email" [carrinho]="carrinho"></app-navbar>
+<app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email" [carrinho]="carrinho"></app-navbar>
 } @else {
-  <app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'" [carrinho]="carrinho"></app-navbar>
+<app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'" [carrinho]="carrinho"></app-navbar>
 }
 
 <main class="bg-green-secundary">
+  <section class="container mx-auto px-4 py-8">
+    <h2 class="text-4xl text-green-light font-semibold my-10">Meu Carrinho</h2>
 
+    <div class="grid grid-flow-col grid-rows-3 gap-4">
+      <div class="col-span-2 bg-white shadow-lg rounded-md">
+        <div class="flex justify-between">
+          <h3 class="text-2xl p-6"><i class="fas fa-basket-shopping text-green-light"></i> Produtos</h3>
+          <a class="p-6" href=""><i class="fas fa-trash"></i>Limpar carrinho</a>
+        </div>
+
+        <div class="flex items-center p-4 border-t border-b-gray-300">
+          <img src="/assets/bgHortlink.png" class="w-24 h-24 object-cover rounded-md" alt="Produto">
+          <div class="ml-4">
+            <h2 class="text-lg font-semibold">Nome do Produto</h2>
+            <p class="text-gray-600 text-sm">Descrição curta ou detalhes</p>
+          </div>
+        </div>
+        <div class="flex items-center p-4 border-t border-b-gray-600">
+          <img src="/assets/bgHortlink.png" class="w-24 h-24 object-cover rounded-md" alt="Produto">
+          <div class="ml-4">
+            <h2 class="text-lg font-semibold">Nome do Produto</h2>
+            <p class="text-gray-600 text-sm">Descrição curta ou detalhes</p>
+          </div>
+        </div>
+      </div>
+      <div class="row-span-3 bg-white shadow-lg rounded-md h-100">01</div>
+    </div>
+
+  </section>
 </main>
 
 <app-footer></app-footer>
