Finaliza a página de carrinho

--- a/frontend/src/app/components/navbar/navbar.html
+++ b/frontend/src/app/components/navbar/navbar.html
@@ -52,6 +52,9 @@
         </div>
         <ul class="py-2" aria-labelledby="user-menu-button">
           <li>
+            <a routerLink="/area-produtor" routerLinkActive=""></a>
+          </li>
+          <li>
             <a (click)="logout()" class="block px-4 py-2 text-sm text-gray-200 hover:bg-gray-400 ">Sair</a>
           </li>
         </ul>
