--- a/frontend/src/app/pages/area-vendedor/painel/painel.component.html
+++ b/frontend/src/app/pages/area-vendedor/painel/painel.component.html
@@ -1,1 +1,53 @@
-<p>painel works!</p>
+@if(usuarioLogado != null) {
+  <app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email"></app-navbar>
+} @else {
+  <app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'"></app-navbar>
+}
+
+    <div class="flex min-h-screen w-full">
+
+  <aside class="w-[250px] bg-gray-100 p-5 border-r border-gray-200 flex flex-col">
+    
+    <div class="text-2xl font-bold text-center mb-8">
+      Minha Loja
+    </div>
+
+    <nav class="flex flex-col space-y-2">
+      <a routerLink="/painel/dashboard" 
+         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200">
+        Dashboard
+      </a>
+      <a routerLink="/painel/pedidos" 
+         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200">
+        Pedidos
+      </a>
+      <a routerLink="/painel/vitrine" 
+         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200">
+        Vitrine
+      </a>
+      
+      <a routerLink="/home" 
+         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200 mt-auto">
+        Sair
+      </a>
+    </nav>
+  </aside>
+
+  <main class="flex-1 p-5 bg-green-secundary">
+    
+    <header class="pb-3 mb-5 border-b border-gray-200">
+      <h2 class="text-2xl font-semibold text-gray-800">
+        Bem-vindo, Vendedor!
+      </h2>
+    </header>
+    
+    <router-outlet></router-outlet>
+    
+  </main>
+
+</div>
+
+
+<app-footer></app-footer>
+
+
