--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,8 +1,5 @@
-@if(usuarioLogado != null) {
-  <app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email"></app-navbar>
-} @else {
-  <app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'"></app-navbar>
-}
+<app-navbar></app-navbar>
+
 <main class="bg-green-secundary">
 
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
