--- a/frontend/src/app/pages/area-vendedor/painel/painel.component.html
+++ b/frontend/src/app/pages/area-vendedor/painel/painel.component.html
@@ -1,53 +1,55 @@
-@if(usuarioLogado != null) {
-  <app-navbar [nomeUsuario]="usuarioLogado.nome" [emailUsuario]="usuarioLogado.email"></app-navbar>
-} @else {
-  <app-navbar [nomeUsuario]="'not found'" [emailUsuario]="'Sem email'"></app-navbar>
-}
+<div class="flex flex-col min-h-screen">
 
-    <div class="flex min-h-screen w-full">
+  <header>
+      <app-navbar></app-navbar>
 
-  <aside class="w-[250px] bg-gray-100 p-5 border-r border-gray-200 flex flex-col">
-    
-    <div class="text-2xl font-bold text-center mb-8">
-      Minha Loja
-    </div>
+  </header>
 
-    <nav class="flex flex-col space-y-2">
-      <a routerLink="/painel/dashboard" 
-         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200">
-        Dashboard
-      </a>
-      <a routerLink="/painel/pedidos" 
-         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200">
-        Pedidos
-      </a>
-      <a routerLink="/painel/vitrine" 
-         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200">
-        Vitrine
-      </a>
-      
-      <a routerLink="/home" 
-         class="px-4 py-2 rounded text-gray-700 hover:bg-gray-200 mt-auto">
-        Sair
-      </a>
-    </nav>
-  </aside>
+  <div class="flex flex-1 w-full overflow-hidden">
 
-  <main class="flex-1 p-5 bg-green-secundary">
-    
-    <header class="pb-3 mb-5 border-b border-gray-200">
-      <h2 class="text-2xl font-semibold text-gray-800">
-        Bem-vindo, Vendedor!
-      </h2>
-    </header>
-    
-    <router-outlet></router-outlet>
-    
-  </main>
+    <aside class="md:w-1/6 w-full  bg-gray-100 p-5 border-r border-gray-200 flex flex-col">
+      <div class="text-2xl font-bold text-center py-4  mb-6 border-gray-200 text-green-primary">
+        Área do Produtor
+      </div>
+      <nav class="flex flex-col space-y-2">
+        <a routerLink="/painel/dashboard" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+          <i class="fa-solid fa-gauge-high mr-2"></i>
+          Dashboard
+        </a>
+        <a routerLink="/painel/cadastrar" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+          <i class="fas fa-plus mr-2"></i>
+          Cadastrar Produto
+        </a>
+        <a routerLink="/painel/pedidos" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+          <i class="fa-solid fa-boxes-stacked mr-2"></i>
+          Pedidos
+        </a>
+        <a routerLink="/painel/vitrine" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-green-primary">
+          <i class="fa-solid fa-bag-shopping mr-2"></i>
+          Vitrine
+        </a>
+        <a routerLink="/home" [routerLinkActive]="activeLinkClasses" class="p-4 rounded text-xl text-gray-700 hover:text-red-400 mt-auto">
+          <i class="fa-solid fa-arrow-right-from-bracket mr-2"></i>
+          Sair
+        </a>
+      </nav>
+    </aside>
+
+    <main class="flex-1 p-5 bg-green-secundary overflow-y-auto">
+      <header class="pb-3 mb-5 border-b border-gray-200">
+        <h2 class="text-2xl font-semibold text-gray-800">
+          Bem-vindo, Vendedor!
+        </h2>
+      </header>
+
+
+      <router-outlet></router-outlet>
+    </main>
+
+  </div>
+
+  <footer>
+    <app-footer></app-footer>
+  </footer>
 
 </div>
-
-
-<app-footer></app-footer>
-
-
